force-app/main/default/objects/IndividualQuotas__c/IndividualQuotas__c.object-meta.xml
<CustomObject>
    <label>Cota Individual</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cotas Individuais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>