force-app/main/default/objects/IndividualQuotas__c/fields/Consumed__c.field-meta.xml
<CustomField>
    <fullName>Consumed__c</fullName>
    <label>Consumido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>