force-app/main/default/objects/IndividualQuotas__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Safra__c</referenceTo>
    <relationshipLabel>Cotas Individuais</relationshipLabel>
    <relationshipName>IndividualQuotas</relationshipName>
    <type>Lookup</type>
</CustomField>