force-app/main/default/objects/IndividualQuotas__c/fields/Cultivate__c.field-meta.xml
<CustomField>
    <fullName>Cultivate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cultivar</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cotas Individuais</relationshipLabel>
    <relationshipName>IndividualQuotas</relationshipName>
    <type>Lookup</type>
</CustomField>