force-app/main/default/objects/IndividualQuotas__c/fields/GeneralQuotas__c.field-meta.xml
<CustomField>
    <fullName>GeneralQuotas__c</fullName>
    <label>Cota Geral (Saldo Macro)</label>
    <referenceTo>GeneralQuotas__c</referenceTo>
    <relationshipLabel>Cotas Individuais</relationshipLabel>
    <relationshipName>IndividualQuotas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>