force-app/main/default/objects/IndividualQuotas__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CTV</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IndividualQuotas</relationshipName>
    <type>Lookup</type>
</CustomField>